add react and react-redux for People's Table with react-table; added loader to TableWithRT

--- a/src/forms/Form.css
+++ b/src/forms/Form.css
@@ -2,4 +2,15 @@
     color:red;
 }
 
+.button-submit {
+    background: #247BA0;
+    color: #fff;
+    margin: 10px;
+    width: 100%;
+}
+
+.disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+}
 
