--- a/src/table/v2/TableWithRT.css
+++ b/src/table/v2/TableWithRT.css
@@ -19,3 +19,23 @@
     text-align: center;
 }
 
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid blue;
+    border-bottom: 16px solid blue;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.loader-center {
+    display: flex;
+    justify-content: center;
+}
